# epsilon-project

./: CMakeLists.txt  CONTRIBUTORS  Doxyfile  INSTALL  Makefile.am  README.cluster  README.mpich  README.testing  autogen.sh  configure.in  epsilon.kdevelop  libepsilon.def  makefile.vc  nmake.opt
cmake/: FindPOPT.cmake  StringOption.cmake
filters/: Makefile.am  beylkin.filter  cdf133.filter  cdf173.filter  cdf53.filter  cdf93.filter  coiflet12.filter  coiflet18.filter  coiflet24.filter  coiflet30.filter  coiflet6.filter  daub10.filter  daub12.filter  daub14.filter  daub16.filter  daub18.filter  daub20.filter  daub4.filter  daub6.filter  daub8.filter  daub97.filter  haar.filter  odegard97.filter  symmlet10.filter  symmlet12.filter  symmlet14.filter  symmlet16.filter  symmlet18.filter  symmlet20.filter  symmlet8.filter  vaidyanathan.filter  villa1311.filter
lib/: CMakeLists.txt  Makefile.am  bit_io.c  bit_io.h  checksum.c  checksum.h  cobs.c  cobs.h  color.c  color.h  common.c  common.h  daub97lift.h  dc_level.c  dc_level.h  filter.c  filter.h  filterbank.c  filterbank.h  libmain.c  libmain.h  list.c  list.h  mem_alloc.c  mem_alloc.h  merge_split.c  merge_split.h  pad.c  pad.h  resample.c  resample.h  speck.c  speck.h
lib/msvc/: inttypes.h
man/: Makefile.am
src/: CMakeLists.txt  Makefile.am  cmd_decode_file.c  cmd_decode_file.h  cmd_encode_file.c  cmd_encode_file.h  cmd_list_all_fb.c  cmd_list_all_fb.h  cmd_start_node.c  cmd_start_node.h  cmd_truncate_file.c  cmd_truncate_file.h  cmd_version.c  cmd_version.h  epsilon.c  misc.c  misc.h  options.h  pbm.c  pbm.h  psi.c  psi.h  worker_mpi_node.c  worker_mpi_node.h
templates/: c  h
tests/: Makefile.am
tests/images/: Makefile.am  gray_dot.pgm  horizontal_gradient.pgm  horizontal_rainbow.ppm  nirvana.ppm  red_dot.ppm  vertical_gradient.pgm  vertical_rainbow.ppm
tests/lib/: Makefile.am
tests/lib/EPSILON/: Makefile.am  Utils.pm
tests/lib/Test/: Makefile.am
tests/lib/Test/PBM/: Makefile.am  PSNR.pm
tests/t/: Makefile.am  quick.t  verification.t
tools/: Makefile.am  make_RGB_to_YCbCr_table.c  make_filterbank.pl  make_number_of_bits_table.c
