# not a GNU package. You can remove this line, if
# have all needed files, that a GNU package needs
AUTOMAKE_OPTIONS = foreign 1.4 dist-zip

SUBDIRS = lib src filters tools man tests

dist_noinst_DATA = Doxyfile INSTALL.generic

EXTRA_DIST = makefile.vc nmake.opt libepsilon.def CONTRIBUTORS README.cluster README.mpich README.testing
