INCLUDES = 
METASOURCES = AUTO
dist_noinst_DATA = haar.filter \
	daub4.filter daub6.filter daub8.filter daub10.filter daub12.filter \
	daub14.filter daub16.filter daub18.filter daub20.filter \
	beylkin.filter vaidyanathan.filter \
	coiflet6.filter coiflet12.filter coiflet18.filter \
	coiflet24.filter coiflet30.filter symmlet8.filter \
	symmlet10.filter symmlet12.filter symmlet14.filter \
	symmlet16.filter symmlet18.filter symmlet20.filter \
	odegard97.filter daub97.filter \
	cdf53.filter cdf93.filter cdf133.filter cdf173.filter \
	villa1311.filter
